objects/NGO_IDO_Personas__mdt.object
<CustomObject>
    <description>WHAT: Custom Metadata for storing IDs of hero records and demo personas. This is used for org configuration updates.
WHO: Brian Ricter | Q Branch
WHEN: 242.1</description>
    <fields>
        <fullName>Demo_Story__c</fullName>
        <label>Demo Story</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Crisis &amp; Trauma Support</fullName>
                    <default>true</default>
                    <label>Crisis &amp; Trauma Support</label>
                </value>
                <value>
                    <fullName>Employment</fullName>
                </value>
                <value>
                    <fullName>Food Access</fullName>
                </value>
                <value>
                    <fullName>Housing</fullName>
                </value>
                <value>
                    <fullName>Mental Health</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>External_Id__c</fullName>
        <description>This is the External Id of the record itself, not of this metadata entry.</description>
        <inlineHelpText>This is the External Id of the record itself, not of this metadata entry.</inlineHelpText>
        <label>External Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Name_of_Record__c</fullName>
        <label>Name of Record</label>
        <length>254</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sort_Order__c</fullName>
        <label>Sort Order</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Target_Type__c</fullName>
        <label>Target Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>ListView</fullName>
                    <default>true</default>
                    <label>ListView</label>
                </value>
                <value>
                    <fullName>Record</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>NGO IDO Personas</label>
    <pluralLabel>NGO IDO Personas</pluralLabel>
</CustomObject>